# csv_remapper_lib

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/csv_remapper_lib/: __init__.py  csv_remapper.py
tests/: generate_huge_test.py  test_basic.py  test_conversor.py  test_merge.py  test_modifications_timing.py  test_remove.py  test_rename.py  test_transformations.py
tests/data/: huge_sample.csv  huge_sample_transformed.csv  huge_test.csv  sample.csv  sample_types.csv  timing_execution.json
tests/data/conversor_test/: sample.csv  sample.json
tests/data/merge_test/: sample.csv  sample_merge_keys_date.csv  sample_merge_keys_number.csv  sample_merge_keys_percentage.csv  sample_merge_keys_text.csv  sample_merge_keys_text_error.csv  sample_merge_keys_time.csv
tests/data/remove_test/: sample_remove_key_no_enought_elements.csv  sample_remove_multiple_keys.csv
tests/data/rename_test/: sample_rename_keys.csv  sample_test_rename_key.csv
tests/data/transform_test/: new_sample_date.csv  sample.csv  sample_date.csv  sample_date_errors.csv  sample_errors.csv  sample_negative_number.csv  sample_positive_number.csv
tests/test_data/: articulos.csv  articulos_errors.csv  items.csv  sample.csv  sample_negative_number.csv  sample_new.csv  sample_positive_number.csv
