[project]
name = "csv_remapper_lib"
version = "0.1.0"
description = "A library for remapping CSV files based on a mapping file."
authors = [
    {name = "Víctor Carrasco"}
]
license = {text = "AGPL v3"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.4.0,<9.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
